<resources>
    <string name="app_name">MVP Android</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_done">Done</string>
    <string name="action_sign_in">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="username_key_sharedprefs">uname</string>
    <string name="password_key_sharedprefs">pwd</string>

    <!--Master Activity -->
    <string name="master_activity_title">Welcome</string>

</resources>
